--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 aho-corasick = "1.1"
+async-std = "1.12.0"
 base64 = "0.21"
 chrono = "0.4"
 fastrand = "2.0"
@@ -17,6 +18,7 @@ num-bigint = { version = "0.4" }
 num-derive = "0.4"
 num-traits = "0.2"
 once_cell = "1.19"
+open = "5.0.1"
 ouroboros = "0.18"
 reqwest = { version = "0.11", features = ["gzip", "deflate", "brotli"] }
 serde = { version = "1.0", features = ["derive"], optional = true }
